--- a/GitHub_tasks/HW Zenkova Arina.Rmd
+++ b/GitHub_tasks/HW Zenkova Arina.Rmd
@@ -190,6 +190,18 @@ data_frame %>%
   arrange(desc('Рост'))
 ```
 
+#dplyr::case_when()
+```{r}
+
+data_frame %>%
+  mutate(`Возростная группа` = case_when(`Возраст` < 20 ~ "< 20",
+                                         between(`Возраст`, 20, 30) ~ "20 - 30",
+                                         `Возраст` > 30 ~ "> 30") %>% as.factor()) %>%
+  select(`Возраст`, `Возростная группа`)
+
+```
+
+
 #Сортировка внутри групп
 ```{r}
 data_frame %>%
