--- a/HW Zenkova Arina.Rmd
+++ b/HW Zenkova Arina.Rmd
@@ -265,7 +265,8 @@ statistics <- list(
 ```
 
 #Формирование статистической таблицы для количественной переменной
-```{r}
+##Испавить код (функция не  выполняется)
+```{r} 
 statistics <- list(
       `Количество субъектов` = ~length(.x),
       `Количество (есть данные)` = ~sum(!is.na(.x)),
