--- a/HW Zenkova Arina.Rmd
+++ b/HW Zenkova Arina.Rmd
@@ -265,7 +265,7 @@ statistics <- list(
 ```
 
 #Формирование статистической таблицы для количественной переменной
-##Испавить код (функция не  выполняется)
+##Испавить код (функция не  выполняется, проблемы с функцией select)
 ```{r} 
 statistics <- list(
       `Количество субъектов` = ~length(.x),
