--- a/GitHub_tasks/HW Zenkova Arina.Rmd
+++ b/GitHub_tasks/HW Zenkova Arina.Rmd
@@ -14,6 +14,7 @@ library(psych)
 
 ## R Markdown
 
+
 # функция mean()
 ```{r}
 mean(c(-2, 16, -3, 16, -9, 7, 31), na.rm = TRUE)
@@ -265,7 +266,8 @@ statistics <- list(
 ```
 
 #Формирование статистической таблицы для количественной переменной
-```{r}
+##Испавить код (функция не  выполняется, проблемы с функцией select)
+```{r} 
 statistics <- list(
       `Количество субъектов` = ~length(.x),
       `Количество (есть данные)` = ~sum(!is.na(.x)),
