--- a/GitHub_tasks/Автоматизация ДЗ/homework_notebook_02.Rmd
+++ b/GitHub_tasks/Автоматизация ДЗ/homework_notebook_02.Rmd
@@ -681,7 +681,6 @@ ggplot(cleaned_data) +
 Данный тип графика отображает абсолютное количество для категориальных переменных. В данном случае можно отобразить, сколько продуктов из категории Rice и сколько продуктов из категории Cookie в абсолютных единицах
 
 
-
 # Статистические оценки
 
 ## Проверка на нормальность
@@ -698,7 +697,7 @@ cleaned_data %>%
 
 ```
 
-В данном случае все перменные распеределены отлично от нормального. 
+В данном случае все перменные распределены отлично от нормального. 
 
 
 
