--- a/GitHub_tasks/Специфика мед данных/HWW.Rmd
+++ b/GitHub_tasks/Специфика мед данных/HWW.Rmd
@@ -161,7 +161,7 @@ roc_curve_1 %>% coords(x = "best", best.method = "closest.topleft")
 Специфичность - 61%
 
 #Задание 6
-##Находим площадь под ROC-кривой для всех пколичественных переменных
+##Находим площадь под ROC-кривой для всех количественных переменных
 ```{r}
 trauma_3 %>% names()
 
