--- a/GitHub_tasks/Управление данными/ADMH.Rmd
+++ b/GitHub_tasks/Управление данными/ADMH.Rmd
@@ -26,9 +26,9 @@ mh_med %>%
 ```{r}
 mh_med_1 <- 
   mh_med %>% 
-  select(MHSEQ,MHCAT,MHTERM, MHDECOD, MHBODSYS, MHSTDTC, MHENDTC, MHENRTPT, STUDYID, SUBJID) %>% 
-  mutate(MHSEQ = as.integer(MHSEQ), 
-         MHENDTC = as.character(MHENDTC)) %>%
+  filter(MHCAT == "Medical History") %>%
+  select(MHSEQ,MHCAT,MHTERM, MHDECOD, MHBODSYS, STUDYID, SUBJID) %>% 
+  mutate(MHSEQ = as.integer(MHSEQ)) %>%
   mutate(MHTERM = ifelse(is.na(MHTERM), "Отсутствует", MHTERM))
   
 ```
@@ -49,37 +49,43 @@ adsl_1 <- adsl %>%
 #Работа с датами
 
 ```{r}
-dates_mh_1 <- mh_med_1 %>% 
+dates_mh_1 <- mh_med %>% 
   select(MHSEQ, MHSTDTC, MHENDTC, MHENRTPT, STUDYID, SUBJID) %>%
-  mutate(ASTDT = case_when(
-    MHSTDTC == format(as.Date(MHSTDTC, format = "%Y-%m-%d"), "%Y-%m-%d") ~ format(as.Date(MHSTDTC, format = "%Y-%m-%d"), "%d.%m.%Y"),
-    MHSTDTC == format(as.Date(MHSTDTC, format = "%Y-%d"), "%Y-%d") ~ format(as.Date(MHSTDTC, format = "%Y-%d"), "01.%d.%Y"),
-    MHSTDTC == format(as.Date(MHSTDTC, format = "%Y"), "%Y") ~ format(as.Date(MHSTDTC, format = "%Y"), "01.01.%Y"),
-    is.na(MHSTDTC) ~ ''
-  )) %>%
-  mutate(AENDT = ifelse(MHENRTPT == 'ONGOING', '', MHENDTC)) %>%
-  mutate(ASTDTF = case_when(is.na(MHENDTC) ~ 'Y',
-                            MHENDTC == format(as.Date(MHENDTC, format = "%%Y-%d"),"%Y-%d") ~ 'D',
-                            MHENDTC == format(as.Date(MHENDTC, format = "%Y"), "%Y") ~ 'M',
-                            MHENDTC == format(as.Date(MHENDTC, format = "%Y-%m-%d"),"%Y-%m-%d") ~ ' ')) %>%
-  mutate(AENDTF = case_when(is.na(MHSTDTC) ~ 'Y',
-                            MHSTDTC == format(as.Date(MHSTDTC, format = "%Y-%d"),"%Y-%d") ~ 'D',
-                            MHSTDTC == format(as.Date(MHSTDTC, format = "%Y"), "%Y") ~ 'M',
-                            MHSTDTC == format(as.Date(MHSTDTC, format = "%Y-%m-%d"),"%Y-%m-%d") ~ ' ')) %>%
-  mutate(MHENRF =ifelse(MHENRTPT == 'ONGOING', 'ONGOING', ''))
+  mutate(MHSEQ = as.integer(MHSEQ),
+         ASTDT = ifelse(nchar(MHSTDTC) == 4, format(as.Date(paste(MHSTDTC,"-01-01", sep=""), 
+                                  format = "%Y-%m-%d"), 
+                          "%d.%m.%Y"), ifelse(nchar(MHSTDTC) == 7, format(as.Date(paste(MHSTDTC,"-01", sep=""), 
+                                  format = "%Y-%m-%d"), 
+                          "%d.%m.%Y"),format(as.Date(MHSTDTC, format = "%Y-%m-%d"),"%d.%m.%Y"))),
+         ASTDTF = ifelse(is.na(MHSTDTC),'Y',
+                         ifelse(nchar(MHSTDTC) == 4, 'M', 
+                        ifelse(nchar(MHSTDTC) == 7,'D',""))),
+         MHENDTC = as.character(MHENDTC),
+         AENDT = ifelse(MHENRTPT == 'ONGOING',"",  ifelse(nchar(MHENDTC) == 4, format(as.Date(paste(MHENDTC,"-01-01", sep=""), 
+                                  format = "%Y-%m-%d"), 
+                          "%d.%m.%Y"), ifelse(nchar(MHENDTC) == 7, format(as.Date(paste(MHENDTC,"-01", sep=""), 
+                                  format = "%Y-%m-%d"), 
+                          "%d.%m.%Y"),format(as.Date(MHENDTC, format = "%Y-%m-%d"),"%d.%m.%Y")))),
+         AENDTF = ifelse(is.na(MHENDTC),'Y',
+                         ifelse(nchar(MHSTDTC) == 4, 'M', 
+                        ifelse(nchar(MHSTDTC) == 7,'D',""))),
+         MHENRF = ifelse(MHENRTPT == 'ONGOING','ONGOING',"")
+         ) 
+  
 ```
 
 
 ```{r}
 date <- left_join(adsl_1, mh_med_1) 
 date_1 <- left_join(date, dates_mh_1)
-ADMH <- date_1 %>%
-  select(!SUBJID) %>%
+date_1 <- filter(date_1, !is.na(MHTERM))
+date_1 <- ADMH[,c("STUDYID","USUBJID","TRTP","TRTPN","MHSEQ", "MHCAT","MHTERM",
+                "MHDECOD", "MHBODSYS", "MHSTDTC", "ASTDT", "ASTDTF", "MHENDTC",
+                "AENDT", "AENDTF", "MHENRTPT", "MHENRF")]
+ADMH_1 <- date_1 %>%
   relocate(ASTDT, .after = MHSTDTC) %>%
   relocate(ASTDTF, .after = ASTDT) %>%
-  relocate(MHENRTPT, .after = AENDTF) %>%
-  mutate(MHSTDTC = as.Date(MHSTDTC)) %>%
-  mutate(MHENDTC = as.Date(MHENDTC))
+  relocate(MHENRTPT, .after = AENDTF) 
 
 ```
 
